fix css giftwrap

--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -124,6 +124,7 @@
 }
 
 .apx_widgets_worker-giftWrap-example {
+    cursor:pointer;
     display: inline-block;
     background: #ccc;
     color: #fff;
